buttons are SO close to being right, got the buttons and main area to align correctly in flex box

--- a/src/client/chrome/css/app.css
+++ b/src/client/chrome/css/app.css
@@ -139,12 +139,12 @@ body {
 }
 
 .lookback-container{
-  width: 95%;
+  width: 98%;
+  /*top/bottom, left/right*/
+  margin: 5px 1%;
   height: calc(100% - 250px);
   overflow: scroll;
   background-color: white;
-  /*top, right, bottom, left*/
-  margin: 5px 30px 5px 30px;
   border:solid 1px $electric-blue;
   position:absolute;
   min-width: 800px;
@@ -158,6 +158,9 @@ body {
 .lookback-graph-container{
   min-width: 800px;
   flex-grow: 1;
+  position: relative;
+  height: inherit;
+  width: inherit;
 }
 
 .lookback-details-container{
@@ -300,20 +303,24 @@ start-time-label .end-time-label{
   justify-content: space-between;
 }
 
-.vertical-axis-label {
+.time-change-button {
   width:35px;
-  /*transform: rotate(270deg);
-  transform-origin: left top 0;
-  font-size: 20;
-  position: absolute;
-  top: 600px;*/
+}
+
+#time-change-btn-buffer{
+  width: 3px;
+  min-height: 60px;
+  height: calc(50% - 75px);
+  position: relative;
+}
+
+#time-change-btn-wrapper{
+  position: relative;
+  left:4px;
 }
 
 .time-labels{
-  margin-left: 30px;
-  margin-right: 15px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px 15px;
   height: 40px;
   min-width: 800px;
   display: flex;
